src/objects/CO_View__c.object
<CustomObject>
    <fields>
        <fullName>AdminEditJustifictaion__c</fullName>
        <label>Admin Edit Justifictaion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Collaborators__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>All Collaborators</label>
        <referenceTo>CO_Score__c</referenceTo>
        <relationshipLabel>Multi Rater (All Collaborators)</relationshipLabel>
        <relationshipName>Multi_Rater1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Completed&apos;),((Cheerful_F__c + Engaged_F__c + PreciseAgileandTransparent_F__c) /3),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CO_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Score</label>
        <referenceTo>CO_Score__c</referenceTo>
        <relationshipLabel>Multi Rater</relationshipLabel>
        <relationshipName>Multi_Rater</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_formula__c</fullName>
        <formula>text(Quarter__c)+ &apos;-&apos; + Employee_Name__r.Full_Name__c+ &apos;-&apos; + text(Matrix_Column_Heading__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheerful_F__c</fullName>
        <formula>CASE(Cheerful__c,
&apos;1. Challenged&apos;, 1,
&apos;2. Satisfactory&apos;, 2,
&apos;3. Professional&apos;, 3,
&apos;4. Positive&apos;, 4,
&apos;5. Inspirational&apos;, 5,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheerful F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheerful__c</fullName>
        <description>Are your work interactions with this person collaborative and harmonious?</description>
        <inlineHelpText>Are your work interactions with this person collaborative and harmonious?</inlineHelpText>
        <label>Cheerful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Challenged</fullName>
                </value>
                <value>
                    <fullName>2. Satisfactory</fullName>
                </value>
                <value>
                    <fullName>3. Professional</fullName>
                </value>
                <value>
                    <fullName>4. Positive</fullName>
                </value>
                <value>
                    <fullName>5. Inspirational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <formula>Rater_Name__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Rater_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeEmpId__c</fullName>
        <formula>Employee_Name__r.User_ID_18_digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Emp Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Emp_Number__c</fullName>
        <formula>Employee_Name__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Emp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_F__c</fullName>
        <formula>Employee_Name__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Multi_Raters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engaged_F__c</fullName>
        <formula>CASE(Engaged__c, 
&apos;1. Quarterly&apos;, 1, 
&apos;2. Monthly&apos;, 2, 
&apos;3. Periodically&apos;, 3, 
&apos;4. Weekly&apos;, 4, 
&apos;5. Daily&apos;, 5, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <description>How frequently have you teamed up with this person in the past quarter?</description>
        <inlineHelpText>How frequently have you teamed up with this person in the past quarter?</inlineHelpText>
        <label>Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Quarterly</fullName>
                </value>
                <value>
                    <fullName>2. Monthly</fullName>
                </value>
                <value>
                    <fullName>3. Periodically</fullName>
                </value>
                <value>
                    <fullName>4. Weekly</fullName>
                </value>
                <value>
                    <fullName>5. Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matrix_Column_Heading__c</fullName>
        <label>Matrix Column Heading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
                <value>
                    <fullName>Dual Line</fullName>
                </value>
                <value>
                    <fullName>Inverse Collaborator</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merit_BU__c</fullName>
        <formula>Rater_Name__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merit BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Role__c</fullName>
        <formula>if(ISPICKVAL(Team_Role__c,&apos;Functional Manager&apos;), 1 ,
if(ISPICKVAL(Team_Role__c,&apos;General Manager&apos;), 2,
if(ISPICKVAL(Team_Role__c,&apos;Dual Line&apos;), 3 ,
if(ISPICKVAL(Team_Role__c,&apos;Direct Report&apos;), 4,
if(ISPICKVAL(Team_Role__c,&apos;Indirect Report&apos;), 5 ,
if(ISPICKVAL(Team_Role__c,&apos;Collaborator&apos;), 6 , 
if(ISPICKVAL(Team_Role__c,&apos;Other Collaborator&apos;), 7, 0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreciseAgileandTransparent_F__c</fullName>
        <formula>CASE(PreciseAgileandTransparent__c, 
&apos;1. Struggles&apos;, 1, 
&apos;2. Learning&apos;, 2, 
&apos;3. Competent&apos;, 3, 
&apos;4. Master&apos;, 4, 
&apos;5. Brilliant&apos;, 5, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreciseAgileandTransparent F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreciseAgileandTransparent__c</fullName>
        <description>Does this person demonstrate thoughtfulness, excellence, and empowerment through work interactions?</description>
        <inlineHelpText>Does this person demonstrate thoughtfulness, excellence, and empowerment through work interactions?</inlineHelpText>
        <label>Precise, Agile, and Transparent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Struggles</fullName>
                </value>
                <value>
                    <fullName>2. Learning</fullName>
                </value>
                <value>
                    <fullName>3. Competent</fullName>
                </value>
                <value>
                    <fullName>4. Master</fullName>
                </value>
                <value>
                    <fullName>5. Brilliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q32017</fullName>
                </value>
                <value>
                    <fullName>Q42017</fullName>
                </value>
                <value>
                    <fullName>Q12018</fullName>
                </value>
                <value>
                    <fullName>Q22018</fullName>
                </value>
                <value>
                    <fullName>Q32018</fullName>
                </value>
                <value>
                    <fullName>Q12019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RaterCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rater Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaterEmpId__c</fullName>
        <formula>Rater_Name__r.User_ID_18_digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater Emp Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rater_Emp_Number__c</fullName>
        <formula>Rater_Name__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater Emp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rater_Employee_Names__c</fullName>
        <formula>Rater_Name__r.Full_Name__c  + &apos;-&apos; +  Employee_Name__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater-Employee Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rater_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rater Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Multi_Raters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rater_is_ME__c</fullName>
        <formula>IF($User.Id = Rater_Name__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater is ME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_F__c</fullName>
        <formula>CASE(Status__c, 
&apos;Not Started&apos;, 0, 
&apos;Completed&apos;, 1, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Role_F__c</fullName>
        <formula>TEXT(Team_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
                <value>
                    <fullName>Dual Line</fullName>
                </value>
                <value>
                    <fullName>Inverse Collaborator</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Rater_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Rollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Custom Rollup object to show the total average per company value.</description>
        <label>Total Rollup</label>
        <referenceTo>CO_Score__c</referenceTo>
        <relationshipLabel>Multi Rater (Total Rollup)</relationshipLabel>
        <relationshipName>Total_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isComplete__c</fullName>
        <formula>IF(
TEXT(Status__c)=&apos;Completed&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isComplete</label>
        <type>Checkbox</type>
    </fields>
    <label>Multi Rater</label>
    <listViews>
        <fullName>My_Inbox</fullName>
        <columns>Employee_F__c</columns>
        <columns>Team_Role_F__c</columns>
        <columns>Engaged__c</columns>
        <columns>PreciseAgileandTransparent__c</columns>
        <columns>Cheerful__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Quarter__c</field>
            <operation>equals</operation>
            <value>Q12019</value>
        </filters>
        <label>My Inbox</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MR-Id-{000000}</displayFormat>
        <label>Multi Rater Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi Rater</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>